# rinha_de_backend_rust

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  db_init.sql  docker-compose-dev.yml  docker-compose.yml  nginx.conf
src/: database.rs  dto.rs  handlers.rs  main.rs  model.rs  models.rs
src/handlers/: count_persons.rs  fetch_person_by_id.rs  fetch_person_by_term.rs  mod.rs  store_person.rs
src/models/: person.rs
