[package]
name = "rinha_de_backend_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
dotenv = "0.15.0"
regex = "1.10.0"
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["macros", "postgres", "runtime-async-std-native-tls", "uuid"] }
uuid = { version = "1.4.1", features = ["v4"] }
